[package]
name = "leptos-compare-image"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = [
    "deref",
    "deref_mut",
    "display",
] }
itertools = "0.13.0"
leptos = "0.6.14"
leptos-use = "0.12.0"
web-sys = { version = "0.3.70", features = ["TouchEvent"] }

[features]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
nightly = ["leptos/nightly"]
