[package]
name = "leptos-compare-image"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { workspace = true, features = ["deref", "deref_mut", "display"] }
itertools = { workspace = true }
leptos = { workspace = true }
leptos-use = { workspace = true }
web-sys = { workspace = true, features = ["TouchEvent"] }

[features]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
nightly = ["leptos/nightly"]
