[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_usage"
path = "src/basic_usage.rs"


[[bin]]
name = "hover"
path = "src/hover.rs"

[[bin]]
name = "show_labels"
path = "src/show_labels.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { workspace = true, features = ["csr"] }
leptos-compare-image = { path = "../../" }
log = "0.4.22"

[features]
basic_usage = []
hover = []
show_labels = []
