[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_usage"
path = "src/basic_usage.rs"


[[bin]]
name = "hover"
path = "src/hover.rs"

[[bin]]
name = "show_labels"
path = "src/show_labels.rs"

[dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos-compare-image = { path = "../../" }
log = { workspace = true }

[features]
basic_usage = []
hover = []
show_labels = []
